fix: thay đổi field reagent, random CAS-Number
